index.html modified

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <main>
     <div class="container">
       <section class="Section-Image">
-        <img src="\images\image-product-desktop.jpg" alt="CHANEL">
+        <img src=".\images\image-product-desktop.jpg" alt="CHANEL">
       </section>
     
       <section class="Section-Text">
